subdir('rdkit-cffi')

install_headers(
	'rdkit-cffi/Geometry/Point.h',
	'rdkit-cffi/GraphMol/ChemReactions/Reaction.h',
	'rdkit-cffi/GraphMol/ChemReactions/ReactionParser.h',
	'rdkit-cffi/GraphMol/ChemReactions/ReactionPickler.h',
	'rdkit-cffi/GraphMol/Depictor/RDDepictor.h',
	'rdkit-cffi/GraphMol/Descriptors/Crippen.h',
	'rdkit-cffi/GraphMol/Descriptors/Lipinski.h',
	'rdkit-cffi/GraphMol/Descriptors/MolDescriptors.h',
	'rdkit-cffi/GraphMol/Descriptors/MolSurf.h',
	'rdkit-cffi/GraphMol/DistGeomHelpers/Embedder.h',
	'rdkit-cffi/GraphMol/FileParsers/FileParsers.h',
	'rdkit-cffi/GraphMol/FileParsers/MolSupplier.h',
	'rdkit-cffi/GraphMol/FileParsers/MolWriters.h',
	'rdkit-cffi/GraphMol/FileParsers/MultithreadedMolSupplier.h',
	'rdkit-cffi/GraphMol/FileParsers/MultithreadedSDMolSupplier.h',
	'rdkit-cffi/GraphMol/FileParsers/MultithreadedSmilesMolSupplier.h',
	'rdkit-cffi/GraphMol/MolDraw2D/MolDraw2D.h',
	'rdkit-cffi/GraphMol/MolDraw2D/MolDraw2DSVG.h',
	'rdkit-cffi/GraphMol/MolStandardize/Charge.h',
	'rdkit-cffi/GraphMol/MolStandardize/Fragment.h',
	'rdkit-cffi/GraphMol/MolStandardize/MolStandardize.h',
	'rdkit-cffi/GraphMol/MolStandardize/Tautomer.h',
	'rdkit-cffi/GraphMol/MolStandardize/Validate.h',
	'rdkit-cffi/GraphMol/PartialCharges/GasteigerCharges.h',
	'rdkit-cffi/GraphMol/SmilesParse/SmilesParse.h',
	'rdkit-cffi/GraphMol/SmilesParse/SmilesWrite.h',
	'rdkit-cffi/GraphMol/Substruct/SubstructMatch.h',
	'rdkit-cffi/GraphMol/Atom.h',
	'rdkit-cffi/GraphMol/Bond.h',
	'rdkit-cffi/GraphMol/Conformer.h',
	'rdkit-cffi/GraphMol/MolOps.h',
	'rdkit-cffi/GraphMol/MolPickler.h',
	'rdkit-cffi/GraphMol/ROMol.h',
	'rdkit-cffi/GraphMol/RWMol.h',
	'rdkit-cffi/GraphMol/RingInfo.h',
	'rdkit-cffi/RDGeneral/RDProps.h',
	'rdkit-cffi/decls.h',
	'rdkit-cffi/stream.h',
	'rdkit-cffi/string.h',
	'rdkit-cffi/types.h',
	'rdkit-cffi/visibility.h',
	preserve_path: true,
)
