files_librdkit_cffi_ll = files(
	'Geometry/Point.cpp',
	'Geometry/Point.hpp',
	'GraphMol/ChemReactions/Reaction.cpp',
	'GraphMol/ChemReactions/Reaction.hpp',
	'GraphMol/ChemReactions/ReactionParser.cpp',
	'GraphMol/ChemReactions/ReactionPickler.cpp',
	'GraphMol/Depictor/RDDepictor.cpp',
	'GraphMol/Descriptors/Crippen.cpp',
	'GraphMol/Descriptors/Lipinski.cpp',
	'GraphMol/Descriptors/MolDescriptors.cpp',
	'GraphMol/Descriptors/MolSurf.cpp',
	'GraphMol/DistGeomHelpers/Embedder.cpp',
	'GraphMol/FileParsers/FileParsers.cpp',
	'GraphMol/FileParsers/MolSupplier.cpp',
	'GraphMol/FileParsers/MolSupplier.hpp',
	'GraphMol/FileParsers/MolWriters.cpp',
	'GraphMol/FileParsers/MolWriters.hpp',
	'GraphMol/FileParsers/MultithreadedMolSupplier.cpp',
	'GraphMol/FileParsers/MultithreadedMolSupplier.hpp',
	'GraphMol/FileParsers/MultithreadedSDMolSupplier.cpp',
	'GraphMol/FileParsers/MultithreadedSDMolSupplier.hpp',
	'GraphMol/FileParsers/MultithreadedSmilesMolSupplier.cpp',
	'GraphMol/FileParsers/MultithreadedSmilesMolSupplier.hpp',
	'GraphMol/MolDraw2D/MolDraw2D.cpp',
	'GraphMol/MolDraw2D/MolDraw2D.hpp',
	'GraphMol/MolDraw2D/MolDraw2DSVG.cpp',
	'GraphMol/MolDraw2D/MolDraw2DSVG.hpp',
	'GraphMol/MolStandardize/Charge.cpp',
	'GraphMol/MolStandardize/Charge.hpp',
	'GraphMol/MolStandardize/Fragment.cpp',
	'GraphMol/MolStandardize/Fragment.hpp',
	'GraphMol/MolStandardize/MolStandardize.cpp',
	'GraphMol/MolStandardize/MolStandardize.hpp',
	'GraphMol/MolStandardize/Tautomer.cpp',
	'GraphMol/MolStandardize/Tautomer.hpp',
	'GraphMol/MolStandardize/Validate.cpp',
	'GraphMol/MolStandardize/Validate.hpp',
	'GraphMol/PartialCharges/GasteigerCharges.cpp',
	'GraphMol/SmilesParse/SmilesParse.cpp',
	'GraphMol/SmilesParse/SmilesWrite.cpp',
	'GraphMol/Substruct/SubstructMatch.cpp',
	'GraphMol/Substruct/SubstructMatch.hpp',
	'GraphMol/Atom.cpp',
	'GraphMol/Atom.hpp',
	'GraphMol/Bond.cpp',
	'GraphMol/Bond.hpp',
	'GraphMol/Chirality.cpp',
	'GraphMol/Conformer.cpp',
	'GraphMol/Conformer.hpp',
	'GraphMol/MolOps.cpp',
	'GraphMol/MolPickler.cpp',
	'GraphMol/ROMol.cpp',
	'GraphMol/ROMol.hpp',
	'GraphMol/RWMol.cpp',
	'GraphMol/RWMol.hpp',
	'GraphMol/RingInfo.cpp',
	'GraphMol/RingInfo.hpp',
	'RDGeneral/RDProps.cpp',
	'RDGeneral/RDProps.hpp',
	'stream.cpp',
	'stream.hpp',
	'string.cpp',
	'string.hpp',
)

rdkit_cffi_ll_include_dirs = [inc_rdkit_cffi, inc_rdkit_cffi_priv, inc_rdkit]
rdkit_cffi_ll_deps = [dep_rdkit_static]
rdkit_cffi_ll_libs = []

# Hide all the symbols from embedded static libraries
rdkit_cffi_ll_link_args = ['-Wl,--exclude-libs=ALL']

librdkit_cffi_ll = both_libraries(
	'rdkit-cffi-ll',
	files_librdkit_cffi_ll,
	gnu_symbol_visibility: 'hidden',
	include_directories: rdkit_cffi_ll_include_dirs,
	dependencies: rdkit_cffi_ll_deps,
	link_with: rdkit_cffi_ll_libs,
	link_args : rdkit_cffi_ll_link_args,
	install: true,
)

pkgconfig.generate(librdkit_cffi_ll,
	libraries_private: ['-lstdc++']
)
